# tidm_exception

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  tidm_exception.pc.in
src/: Makefile.am  Makefile.in  exception.cpp  exception.hpp
test/: Makefile.am  Makefile.in  main.cpp
